* infoboxes
  - added ":1" unit for gradient type displays
  - new infobox: % time non-circling climb
  - new infobox: % climb chart showing proportions of time spent circling climb (gray), cruise,
      climbing cruise (green), circling non-climb (orange)
  - improved auto-scaling of vario-like graphical infoboxes
  - new infobox: "Number Of Satellites"
* Windows
  - drop support for Windows CE
  - require Windows Vista or later
  - allow starting multiple XCSoar instances
* Linux
  - drop support for SDL 1.2
  - display rotation
* Android
  - drop support for ARMv6 and MIPS CPUs
* Kobo
  - support Kobo Glo HD

Version 6.8.12 - 2019/04/30
* weather
  - update source URLs for METARs and TAFs (https://)
* Android
  - increase targetSdkVersion to 26 (required by Google Play)
  - request storage and GPS permissions on Android 6+
  - fix crash when permission to use GPS is revoked
  - fix notification on Android 8+
* Task Editor
  - fixed task editor crashes (Ticket 3930).
* devices
  - IMI: raise max payload size to 2kB
* fix IGC logger crash when no date is available

Version 6.8.11 - 2018/08/18
* terrain
  - fix yet another crash bug (libJasper)
* Android
  - fix crash on Android 8 due to overzealous seccomp filter

Version 6.8.10 - 2017/10/07
* terrain
  - fix crash bug (6.8.9 regression)

Version 6.8.9 - 2017/10/05
* terrain
  - fix several crash bugs
* fix two crash bugs
* Kobo
  - fix internet access (#3869)
  - support for Kobo Glo HD Refurbished

Version 6.8.8 - 2017/09/09
* data files
  - support "GSEC" in OpenAir files
* weather
  - update source URLs for METARs and TAFs
* devices
  - CAI302: fix waypoint download (#3830)
  - IMI: fix PGRMZ parsing (was interpreted as altitude, now is pressure altitude)
  - LX: fix Nano 3 task declaration (#3858)
* Kobo
  - support for Kobo Aura Edition 2
  - support for Kobo Glo Refurbished
  - fix Wi-Fi on recent Kobo firmware releases (#3850)
  - fix USB storage compatibility with Windows 10
* Raspberry Pi