@@ -425,6 +425,14 @@ event=Mode default
 label=Target$(CheckTask)$(CheckTaskResumed)
 location=7
 
+mode=Nav2
+type=key
+data=7
+event=Mode default
+event=StatusMessage Dropped marker start
+event=MarkerStart
+label=Marker\nStart
+location=8
 # -------------
 # mode=Display1
 # -------------
